# GreggLimper

./: .env.example  .gitignore  FINETUNER_ROADMAP.md  LICENSE  README.md  config.sample.toml  config.toml  debug_sys_prompt.md  milvus_gpu_guide.ipynb  pyproject.toml  pytest.ini  requirements.txt  test_output.txt
config/: .env.example  CONFIG.md  config.sample.toml
docs/: setup_milvus_gpu.ipynb
gregg_limper/: .env  __main__.py  cache.py  client_disc.py  client_oai.py  config.py  maintenance.py
gregg_limper/clients/: disc.py  oai.py  ollama.py
gregg_limper/commands/: __init__.py  lobotomy.py  mention.py
gregg_limper/config/: __init__.py  cache.py  core.py  milvus.py  rag.py
gregg_limper/event_hooks/: message_hook.py  reaction_hook.py  ready_hook.py
gregg_limper/formatter/: __init__.py  classifier.py  codec.py  composer.py  model.py
gregg_limper/memory/: cache.py
gregg_limper/response/: __init__.py  cache_adapter.py  context.py  history_builder.py  prompt.py  prompt_builder.py  prompt_template.py  sys_prompt.py  system_prompt.py
gregg_limper/responses/: __init__.py  prompt_builder.py
scripts/: list_guild_emojis.py
setup_guides/: restart_milvus_gpu.ipynb  setup_milvus_gpu.ipynb
src/gregg_limper/: __main__.py  maintenance.py
tests/: conftest.py  test_commands_feedback.py  test_commands_setup.py
tests/cache/: test_initialize.py  test_manager.py
tests/event_hooks/: test_reaction_hook.py
tests/formatter/: test_formatter.py
tuner/: README.md  __init__.py  __main__.py  cli.py  config.py  config.sample.toml  discord_client.py  runner.py
(+154 files in other folders)
